--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-render-if-visible": "^2.1.1",
+    "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
