--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-render-if-visible": "^2.1.1",
+    "react-swipeable": "^7.0.0",
     "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
