--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -19,7 +21,8 @@
     "react-icons": "^4.7.1",
     "react-render-if-visible": "^2.1.1",
     "react-swipeable": "^7.0.0",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
