--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-render-if-visible": "^2.1.1",
+    "react-scroll": "^1.8.9",
     "react-swipeable": "^7.0.0",
     "react-use-scroll-snap": "^0.0.4",
     "react-visibility-sensor": "^5.1.1",
