--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-tailwind/html": "^2.0.0",
+    "@material-tailwind/react": "^1.4.2",
+    "@mui/material": "^5.11.11",
     "@next/font": "^13.1.6",
     "daisyui": "^2.51.0",
     "eslint": "8.33.0",
