--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-tailwind/react": "^1.4.2",
     "@mui/material": "^5.11.11",
     "@next/font": "^13.1.6",
+    "@vercel/analytics": "^0.1.11",
     "daisyui": "^2.51.0",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
