--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.7.1",
     "react-render-if-visible": "^2.1.1",
     "react-scroll": "^1.8.9",
